# agent-skills

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/write-like-you-talk/: README.md
skills/: README.md
skills/documentation/: readme.md
skills/general/: hello-world.md
skills/writing/: write-like-you-talk.md
skillsctl/: __init__.py  audit.py  cli.py  embed.py  fix.py  migrate.py  plan.py  rules.py  scan.py  schema.py
skillsctl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_audit.py  test_fix.py  test_migrate.py  test_plan.py  test_rules.py  test_scan.py  test_schema.py
tests/fixtures/: bad_frontmatter.md  good_skill.md  missing_fields.md  no_frontmatter.md
